--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
 <body>
     <div id="temporizador">Tiempo: 60 segundos</div>
 
-    <div class="drop">
-        <div id="zonaDrop">Imagen aquí</div>
-        <div id="zonaDrop">Imagen aquí</div>
-        <div id="zonaDrop">Imagen aquí</div>
-        <div id="zonaDrop">Imagen aquí</div>
-    </div>
+    <div id="zonaDrop">Imagen aquí</div>
+    
     <div class="drag">
         <div class="elemento" id="elemento1">Palabra 1</div>
         <div class="elemento" id="elemento2">Palabra 2</div>
@@ -22,6 +18,7 @@
         <div class="elemento" id="elemento4">Palabra 4</div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
