lógica js terminada

--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+    <h1 id="titulo">¿Cómo me llamo?</h1>
     <div id="temporizador">Tiempo: 60 segundos</div>
-
-    <div id="zonaDrop">Imagen aquí</div>
+    <img src="img/seta.png" alt="">
+    <div id="zonaDrop"></div>
     
     <div class="drag">
-        <div class="elemento" id="elemento1">Palabra 1</div>
-        <div class="elemento" id="elemento2">Palabra 2</div>
-        <div class="elemento" id="elemento3">Palabra 3</div>
-        <div class="elemento" id="elemento4">Palabra 4</div>
+        <div class="elemento" id="elemento1">SUTO</div>
+        <div class="elemento" id="elemento2">SETA</div>
+        <div class="elemento" id="elemento3">SETO</div>
+        <div class="elemento" id="elemento4">SOTO</div>
     </div>
+    <div id="ayuda">Arrastra las tarjetas hacia la casilla superior</div>
+    <p id="resultado"></p>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="js/index.js"></script>
