cambios en la hoja de estilo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 id="titulo">¿Cómo me llamo?</h1>
     <div id="temporizador">Tiempo: 60 segundos</div>
-    <img src="img/seta.png" alt="">
+    <img id="dibujo" src="img/seta.png" alt="">
     <div id="zonaDrop"></div>
     
     <div class="drag">
@@ -18,8 +18,8 @@
         <div class="elemento" id="elemento3">SETO</div>
         <div class="elemento" id="elemento4">SOTO</div>
     </div>
-    <div id="ayuda">Arrastra las tarjetas hacia la casilla superior</div>
-    <p id="resultado"></p>
+    <p id="resultado">...</p>
+    <input type="button" id="boton_siguiente" value="Siguiente">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="js/index.js"></script>
